--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <section class="main-contaier">
         <h1 class="header-title section-header-title-en">JavaScript</h1>
         <h3 class="section-header-title">
-            <span class="en-little-text">دستورات شرطی</span>
+            <span class="en-little-text">
+                جریان کنترل
+            </span>
         </h3>
         <ul class="section-menu-container">
             <li class="section-menu-item section-menu-item-header">
